# algorithms-and-patterns

./: README.md
Chapter1/Factorial/: CMakelists.txt  algorithm.h  main.cpp
Chapter1/FractalStar/: CMakeLists.txt  README.md  fractal.cpp  fractal.h  graphicsConsole.cpp  main.cpp
Chapter1/HilbertFractal/: CMakeLists.txt  README.md  graphicsConsole.cpp  hilbert.cpp  hilbert.h  main.cpp
Chapter1/MazeBacktrack/: CMakeLists.txt  main.cpp  maze.cpp  maze.h
Chapter2/: CMakelists.txt  Sortable.h  array.cpp  array.h  main.cpp  sorter.h
Chapter3/Graph/: CMakeLists.txt  Readme.md  graph.conf  graph.cpp  graph.h  main.cpp
Chapter3/searcher/: CMakelists.txt  main.cpp  searcher.cpp  searcher.h
common/: console.cpp  console.h  graphicsConsole.cpp  graphicsConsole.h
